2004-09-26  Mike Kestner  <mkestner@ximian.com>

	* glib/Idle.cs : proxy hash keys are uints, not ints.

2004-09-24  Mike Kestner  <mkestner@ximian.com>

	* gtk/Bin.custom : make Child get/set.
	* gtk/Gtk.metadata : hide the Bin.get_child method.
	[Fixes #66232]

2004-09-23  Mike Kestner  <mkestner@ximian.com>

	* gtk/Widget.custom : new OnSetScrollAdjustments VM. 
	* gtk/glue/widget.c : glue for new VM.

2004-09-18  Miguel de Icaza  <miguel@ximian.com>

	* glib/Source.cs: Add new base class to hold the method to be
	called, and the proxy handler we use to keep references to them
	and avoid a collection.

	Exposes a new variables that references all the active Timeouts
	and Idle handlers to avoid collection/

	* glib/Timeout.cs: Implement TimeoutProxy that acts as a filter to
	remove the proxy when the timeout is removed.

	Register a TimeoutProxy when we create a timeout.

	* glib/Idle.cs: Implement IdleProxy that acts as a filter to
	remove the proxy when the idle handler is removed.

	Register an IdleProxy when we create a timeout.

2004-09-17  Mike Kestner  <mkestner@ximian.com>

	* configure.in : bump version and tag for 1.0.2.

2004-09-17  Mike Kestner  <mkestner@ximian.com>

	* configure.in : bump version and tag for 1.0.2.

2004-09-17  Mike Kestner  <mkestner@ximian.com>

	* configure.in : use either gtkhtml 3.0 or 3.2

2004-09-14  Mike Kestner  <mkestner@ximian.com>

	* gdk/* : remaining API audit fixes.

2004-09-09  Mike Kestner  <mkestner@ximian.com>

	* gdk/Device.custom : manual GetHistory impl.
	* gdk/Display.custom : manual GetPointer overloads.
	* gdk/Gdk.metadata : hides and array params.
	* gdk/Makefile.am : add new file.
	* gdk/TextProperty.cs : new manual impl of methods.

2004-09-03  Mike Kestner  <mkestner@ximian.com>

	* configure.in : expand new doc/updater makefile
	* gtk/Gtk.metadata : hide Init.Check and AbiCheck*.
	* gtk/Init.custom : manual Init.Check impl.
	* gtk/Makefile.am : add Init.custom.
