@@ -344,7 +344,7 @@ public class ButtonApp  {
       <Docs>
         <summary>Whether or not the cursor is inside the button.</summary>
         <returns>a <see cref="T:System.Boolean" />, true if the cursor is inside the button.</returns>
-        <remarks/>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="NewWithMnemonic">
@@ -489,6 +489,21 @@ public class ButtonApp  {
         <param name="gtype">a <see cref="T:GLib.GType" /></param>
         <returns>a <see cref="T:Gtk.Button" /></returns>
         <remarks>Chain to this constructor if you have manually registered a native <see cref="T:GLib.GType" /> value for your subclass.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public Button (Gtk.Widget widget);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="widget" Type="Gtk.Widget" />
+      </Parameters>
+      <Docs>
+        <summary>Constructs a button containing a specified Child widget.</summary>
+        <param name="widget">a child <see cref="T:Gtk.Widget" /></param>
+        <returns>a <see cref="T:Gtk.Button" /></returns>
+        <remarks>
+	</remarks>
       </Docs>
     </Member>
   </Members>
