@@ -52,3 +52,8 @@ public bool InButton {
 		gtksharp_button_set_in_button (Handle, value ? 1 : 0);
 	}
 }
+
+public Button (Widget widget) : this ()
+{
+	Add (widget);
+}
