@@ -1,3 +1,9 @@
+2004-09-27  Mike Kestner  <mkestner@ximian.com>
+
+	* gtk/Button.custom : add a ctor (Widget). reworked from patch by
+	John Luke.
+	[Fixes #66228]
+
 2004-09-26  Mike Kestner  <mkestner@ximian.com>
 
 	* glib/Idle.cs : proxy hash keys are uints, not ints.
